Fix parsing of some edge cases of background shorthand.  Bug 124193, r=pierre, sr=attinasi, a=roc+moz